Fri Oct 18 15:13:24 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/tmpl/event_structs.sgml: Update the docs for
	the event->key.string to say that @string is deprecated.

Mon Oct 14 19:34:26 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/Makefile.am (content_files)
	  gdk-pixbuf/Makefile.am (content_files): Add some missing
	files.

Mon Oct 14 19:16:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk-sections.txt: Update.

	* gdk/tmpl/images.sgml gtk/tmpl/gtkmain.sgml 
	gtk/tmpl/gtkselection.sgml: Remove docs that were moved
	the the C files.

2002-10-14  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/Makefile.am (dist-hook): 
	* gdk/Makefile.am (dist-hook): 
	* gtk/Makefile.am (dist-hook): Dist the xml/*.xml, not
	sgml/*.sgml.  (#95678, Owen Taylor)

2002-10-14  Matthias Clasen  <maclas@gmx.de>

	* gtk/Makefile.am (SCANOBJ_FILES): 
	* gdk-pixbuf/Makefile.am (SCANOBJ_FILES): 
	* gdk/Makefile.am (SCANOBJ_FILES): Add $(DOC_MODULE).interfaces.

2002-10-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkimagemenuitem.sgml: Add a bit.

	* gtk/tmpl/gtkimage.sgml: Fix example.

	* gtk/tmpl/gtkrc.sgml: Spelling fixes.

	* gdk-pixbuf/tmpl/refcounting.sgml: Remove documentation for
	non-longer-present last-unref hook.

	* gtk/tmpl/gtkfilesel.sgml: s/GtkCList/GtkTreeView/.

	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add some missing symbols.

	* gdk/gdk-sections.txt: Add some missing symbols.

	* gdk/Makefile.am (IGNORE_HFILES): Add gdkintl.h and gdkmarshalers.h.

	* gtk/gtk-sections.txt: Add some missing symbols.

2002-10-04  Matthias Clasen  <maclas@gmx.de>

	* gtk/running.sgml: Document GDK_PIXBUF_MODULE_FILE.

	* gdk-pixbuf/tmpl/module_interface.sgml: Some information for
	module writers.

2002-08-12  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdk-sections.txt: Remove gdk_screen_close, add a section
	for GdkDisplayManager, add gdk_visual_get_screen and
	gdk_colormap_get_screen. 
	
2002-08-07  Matthias Clasen  <maclas@gmx.de>
